v1.0.5 |
- Soda / Vanilla.css
	- Added b, hr, and i default styling
	- Swapped scrollbar gutter colors

v1.0.4 | June 21st, 2024
- Soda
	- Updated compile.sh
	- Updated README.md
	- Removed demo.html
- Soda / Cherry.css
	- Added .soda-droplist
	- Switched to --soda-theme
- Soda / Corn.js
	- Removed Soda / Corn.js
- Soda / Grape.css
	- Added mint-green, mint-blue, and cherry-blossom
- Soda / Lemon.js
	- Removed Soda / Lemon.js
- Soda / Vanilla.css
	- Added --soda-theme variable

v1.0.3 | June 16th, 2024
- Soda
	- Added demo.html
	- Added watch.sh
	- Updated changelog format
- Soda / Apple.css
	- Renamed .soda-hover-underline to .soda-underline
	- Merged with cherry.scss
	- Removed .soda-font-*
	- Removed .soda-hover-overline
- Soda / Cherry.css
	- Added Soda / Cherry.css
- Soda / Vanilla.css
	- Added dark theme
	- Swapped scrollbar gutter colors

v1.0.2 | June 9th, 2024
- Added Soda / Apple.css
- Fixed "true-brown" and "true-dark-brown" in Soda / Grape.css

v1.0.1 | June 8th, 2024
- Added Soda / Vanilla.css

v1.0.0 | June 8th, 2024
- Major rewrite
- Added Soda / Lemon.js
- Added Soda / Raspberry.js
- Added Soda / Corn.js
- Added Soda / Grape.css

v1.beta-pre.1 | May 26th, 2024
- Added more flex classes
- Modified fonts classes

v1.beta-pre.0 | May 26th, 2024
- Added basic features